k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcv-redirector-app
  namespace: tcv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcv-redirector-app
  template:
    metadata:
      labels:
        app: tcv-redirector-app
    spec:
      containers:
        - name: tcv-redirector-app
          image: viniciusls/tcv:redirector-app
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: tcv-creds
