k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tcv-redirector-app
  namespace: tcv
spec:
  selector:
    app: tcv-redirector-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
