k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcv-redirector-ingress
  namespace: tcv
spec:
  rules:
    - host: techcomvini.com.br
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: tcv-redirector-app
                port:
                  number: 80
